@@ -1,15 +1,11 @@
 package com.enderio.machines.client.model;
 
-import com.enderio.machines.EIOMachines;
-import com.enderio.machines.common.blockentity.base.MachineBlockEntity;
-import com.enderio.machines.common.blockentity.data.sidecontrol.IOConfig;
 import com.google.gson.JsonDeserializationContext;
 import com.google.gson.JsonObject;
 import com.mojang.datafixers.util.Pair;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.renderer.block.model.BakedQuad;
 import net.minecraft.client.renderer.block.model.ItemOverrides;
-import net.minecraft.client.renderer.texture.MissingTextureAtlasSprite;
 import net.minecraft.client.renderer.texture.TextureAtlas;
 import net.minecraft.client.renderer.texture.TextureAtlasSprite;
 import net.minecraft.client.resources.model.*;
@@ -17,6 +13,7 @@ import net.minecraft.core.Direction;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.packs.resources.ResourceManager;
 import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.material.Fluids;
 import net.minecraft.world.phys.Vec3;
 import net.minecraftforge.client.model.IModelConfiguration;
 import net.minecraftforge.client.model.IModelLoader;
@@ -29,78 +26,55 @@ import org.jetbrains.annotations.Nullable;
 import java.util.*;
 import java.util.function.Function;
 
-public class IOOverlayBakedModel implements IDynamicBakedModel {
-    public static final ResourceLocation TEX_DISABLED = EIOMachines.loc("block/overlay/disabled");
-    public static final ResourceLocation TEX_PULL = EIOMachines.loc("block/overlay/pull");
-    public static final ResourceLocation TEX_PUSH = EIOMachines.loc("block/overlay/push");
-    public static final ResourceLocation TEX_PUSH_PULL = EIOMachines.loc("block/overlay/push_pull");
-
+// TODO: This will be used for the item
+public class TankFluidBakedModel implements IDynamicBakedModel {
     private static final EnumMap<Direction, Vec3[]> QUADS = new EnumMap<>(Direction.class);
 
     static {
         for (Direction dir : Direction.values()) {
-            QUADS.put(dir, ModelRenderUtil.createQuadVerts(dir, 0.0625f, 1 - 0.0625f, 1));
+            QUADS.put(dir, ModelRenderUtil.createQuadVerts(dir, 1/16f, 1 - 1/16f, 1 - 1/16f));
         }
-    }
-
-    private TextureAtlasSprite getTexture(IOConfig.IOState ioState) {
-        ResourceLocation tex = switch (ioState) {
-            case NONE -> MissingTextureAtlasSprite.getLocation();
-        case PUSH -> TEX_PUSH;
-        case PULL -> TEX_PULL;
-        case BOTH -> TEX_PUSH_PULL;
-        case DISABLED -> TEX_DISABLED;
-        };
-
-        return Minecraft.getInstance().getTextureAtlas(TextureAtlas.LOCATION_BLOCKS).apply(tex);
     }
 
     private final Direction north;
 
-    public IOOverlayBakedModel(ModelState transform) {
+    public TankFluidBakedModel(ModelState transform) {
         this.north = Direction.rotate(transform.getRotation().getMatrix(), Direction.NORTH);
     }
 
     // Gets the direction local to the rendered block, rather than the query
     private Direction getWorldDirection(Direction direction) {
         return switch (direction) {
-        case NORTH -> this.north;
-        case SOUTH -> this.north.getOpposite();
-        case WEST -> this.north.getCounterClockWise();
-        case EAST -> this.north.getClockWise();
-        default -> direction;
+            case NORTH -> this.north;
+            case SOUTH -> this.north.getOpposite();
+            case WEST -> this.north.getCounterClockWise();
+            case EAST -> this.north.getClockWise();
+            default -> direction;
         };
+    }
+
+    private TextureAtlasSprite getTexture() {
+        return Minecraft.getInstance().getTextureAtlas(TextureAtlas.LOCATION_BLOCKS).apply(new ResourceLocation("block/water_still")); // TODO: This gonna need dynamic colouring for fluid types :/
     }
 
     @NotNull
     @Override
     public List<BakedQuad> getQuads(@Nullable BlockState state, @Nullable Direction side, @NotNull Random rand, @NotNull IModelData extraData) {
-        if (extraData.hasProperty(MachineBlockEntity.IO_CONFIG_PROPERTY)) {
-            // Get io config from the block entity.
-            IOConfig config = extraData.getData(MachineBlockEntity.IO_CONFIG_PROPERTY);
-            if (config != null) {
-                // Build a list of quads
-                List<BakedQuad> quads = new ArrayList<>();
+        // Build a list of quads
+        List<BakedQuad> quads = new ArrayList<>();
 
-                // Get all states for each direction. If its not "None" then we render an overlay quad.
-                for (Direction dir : Direction.values()) {
-                    IOConfig.IOState ioState = config.getIO(dir);
-                    if (ioState != IOConfig.IOState.NONE) {
-                        Vec3[] verts = QUADS.get(getWorldDirection(dir));
-                        quads.add(ModelRenderUtil.createQuad(verts, getTexture(ioState)));
-                    }
-                }
-
-                return quads;
-            }
+        // Get all states for each direction. If its not "None" then we render an overlay quad.
+        for (Direction dir : Direction.values()) {
+            Vec3[] verts = QUADS.get(getWorldDirection(dir));
+            quads.add(ModelRenderUtil.createQuad(verts, getTexture(), Fluids.WATER.getAttributes().getColor()));
         }
 
-        return Collections.emptyList();
+        return quads;
     }
 
     @Override
     public boolean useAmbientOcclusion() {
-        return true;
+        return false;
     }
 
     @Override
@@ -110,7 +84,7 @@ public class IOOverlayBakedModel implements IDynamicBakedModel {
 
     @Override
     public boolean usesBlockLight() {
-        return true;
+        return false;
     }
 
     @Override
@@ -125,29 +99,20 @@ public class IOOverlayBakedModel implements IDynamicBakedModel {
 
     @Override
     public ItemOverrides getOverrides() {
-        return ItemOverrides.EMPTY;
-    }
-
-    private static Vec3 v(double x, double y, double z) {
-        return new Vec3(x, y, z);
+        return null;
     }
 
     public static class Geometry implements IModelGeometry<Geometry> {
         @Override
         public BakedModel bake(IModelConfiguration owner, ModelBakery bakery, Function<Material, TextureAtlasSprite> spriteGetter, ModelState modelTransform,
             ItemOverrides overrides, ResourceLocation modelLocation) {
-            return new IOOverlayBakedModel(modelTransform);
+            return new TankFluidBakedModel(modelTransform);
         }
 
         @Override
         public Collection<Material> getTextures(IModelConfiguration owner, Function<ResourceLocation, UnbakedModel> modelGetter,
             Set<Pair<String, String>> missingTextureErrors) {
-            return List.of(
-                new Material(TextureAtlas.LOCATION_BLOCKS, EIOMachines.loc("block/overlay/disabled")),
-                new Material(TextureAtlas.LOCATION_BLOCKS, EIOMachines.loc("block/overlay/pull")),
-                new Material(TextureAtlas.LOCATION_BLOCKS, EIOMachines.loc("block/overlay/push")),
-                new Material(TextureAtlas.LOCATION_BLOCKS, EIOMachines.loc("block/overlay/push_pull"))
-            );
+            return Collections.emptyList();
         }
     }
 
@@ -162,5 +127,4 @@ public class IOOverlayBakedModel implements IDynamicBakedModel {
 
         }
     }
-
 }
